--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "human-resources",
+  "name": "gestor-de-pacientes",
   "version": "1.0.0",
   "description": "tesis",
   "license": "MIT license",
