--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.4",
     "mysql": "^2.18.1",
+    "mysqldump": "^3.2.0",
     "node-cron": "^3.0.2",
     "node-fetch": "^2.6.7",
     "nodemon": "^2.0.15",
